--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-I won't be uploading the data files because of sensitive information. The main logic is in bot.py
-Test out the bot in Telegram! @tebby_bot
+data file not uploaded. The main logic is in bot.py
+Test out the bot in Telegram! Send a /help to @tebby_bot
