--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-data file not uploaded. The main logic is in bot.py
-Test out the bot in Telegram! Send a /help to @tebby_bot
+Send a /help to @tebby_bot
+Tebby is an API-wielding swiss-army bot
